# devalpha-mcp

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  ruff.toml  smithery.yaml
.github/workflows/: ci.yml
devalpha_mcp/: __init__.py  __main__.py  server.py
