[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devalpha-mcp"
version = "0.1.0"
description = "DevAlpha MCP Server — AI-native on-chain intelligence for builder agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "DevAlpha" }]
keywords = ["mcp", "web3", "blockchain", "ai", "defi", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "structlog>=25.5.0",
]

[project.urls]
Homepage = "https://devalpha.dev"
Repository = "https://github.com/LibruaryNFT/devalpha-mcp"
Documentation = "https://devalpha.dev/for-agents"
